--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </p> <p>This policy is effective as of 2022-07-22
                 </p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact me at evespiritcz@gmail.com.
+                  Privacy Policy, please contact us at evespiritcz@gmail.com.
     </body>
     </html>
       
