--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   choose to refuse our cookies, you may not be able to use some
                   portions of this Service.
                 </p> <p><strong>Service Providers</strong></p> <p>
-                  I may employ third-party companies and
+                  We may employ third-party companies and
                   individuals due to the following reasons:
                 </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
                   We want to inform users of this Service
@@ -75,7 +75,7 @@
                   We value your trust in providing us your
                   Personal Information, thus we are striving to use advanced
                   means of protecting it, however, we are unable to
-                  guarantee it's absolute safety with 100% certainty due to
+                  guarantee its absolute safety with 100% certainty due to
                   possible unknown vulnerabilities, transmission errors, et al.
                 </p> <p><strong>Links to Other Sites</strong></p> <p>
                   This Service may contain links to other sites. If you click on
